# animactory

./: CMakeLists.txt  README.md
binary/: ay_deciduous_tree.cc
include/animactory/: Canvas.h  Paint.h  Path.h  Pattern.h  Surface.h
modules/: FindCairo.cmake
